src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Account_Logo_URL__c</fullName>
        <label>Account Logo URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Completed_Time_Record_Date__c</fullName>
        <description>The Date of the Last Completed Time Record</description>
        <inlineHelpText>The Date of the Last Completed Time Record</inlineHelpText>
        <label>Last Completed Time Record Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Line_of_Business__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Line of Business</label>
        <referenceTo>Line_of_Business__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Logo_Large__c</fullName>
        <formula>IF(
ISBLANK(Account_Logo_URL__c),
&quot;Logo URL Not Set&quot;,
IMAGE(Account_Logo_URL__c, &quot;URL not specified&quot;, 100, 300)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Logo (Large)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Logo_Small__c</fullName>
        <formula>IMAGE(Account_Logo_URL__c, &quot;URL not specified&quot;, 50, 150)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Logo (Small)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referring_Account__c</fullName>
        <formula>Referring_Contact__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Referring Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referring_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referring Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Referred Accounts</relationshipLabel>
        <relationshipName>Referred_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SafeId__c</fullName>
        <formula>CaseSafeId(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SafeId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Dormant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Out of Business</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Target_Priority__c</fullName>
        <label>Target Priority</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tax_Code_Test__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax Code Test</label>
        <referenceTo>Tax_Code_Test__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Test__c</fullName>
        <label>Test</label>
        <picklist>
            <picklistValues>
                <fullName>PA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NY</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Time_Records_Related_To_Account__c</fullName>
        <formula>HYPERLINK(&quot;https://na1.salesforce.com/00O30000008EZek?pv0=&quot;&amp; SafeId__c ,&quot;Click Here&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Records Related To Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Billable_Hours__c</fullName>
        <description>The Total of All Billable Hours Associated with this Account</description>
        <inlineHelpText>The Total of All Billable Hours Associated with this Account</inlineHelpText>
        <label>Total Billable Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Invoiced_Hours__c</fullName>
        <description>The Total of All Invoiced Hours Associated with this Account</description>
        <inlineHelpText>The Total of All Invoiced Hours Associated with this Account</inlineHelpText>
        <label>Total Invoiced Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unpaid_Invoice_Report__c</fullName>
        <formula>HYPERLINK(&quot;https://na1.salesforce.com/00O30000008IhRB?pv0=&quot;&amp; Id ,&quot;Click Here&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unpaid Invoice Report</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Active__c</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>ACCOUNT.LAST_ACTIVITY</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>EIC_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Target_Priority__c</columns>
        <columns>Status__c</columns>
        <columns>Line_of_Business__c</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Line_of_Business__c</field>
            <operation>equals</operation>
            <value>EIC</value>
        </filters>
        <label>EIC Accounts</label>
        <language>en_US</language>
        <sharedTo>
            <group>I_T_Group</group>
            <group>WIN_Staff</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EIC_Accounts_Priority_1</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Target_Priority__c</columns>
        <columns>Status__c</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Line_of_Business__c</field>
            <operation>equals</operation>
            <value>EIC</value>
        </filters>
        <filters>
            <field>Target_Priority__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>EIC Accounts Priority 1</label>
        <language>en_US</language>
        <sharedTo>
            <group>I_T_Group</group>
            <group>WIN_Staff</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>I_T_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Line_of_Business__c</field>
            <operation>equals</operation>
            <value>I/T</value>
        </filters>
        <label>I/T Accounts</label>
        <language>en_US</language>
        <sharedTo>
            <group>I_T_Group</group>
            <group>WIN_Staff</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <recordTypes>
        <fullName>EIC_Training</fullName>
        <active>true</active>
        <description>EIC Training Accounts</description>
        <label>EIC Training</label>
    </recordTypes>
    <recordTypes>
        <fullName>WIN_Account</fullName>
        <active>true</active>
        <description>WIN Account</description>
        <label>WIN Account</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Test_Validation_Rule</fullName>
        <active>false</active>
        <description>Test</description>
        <errorConditionFormula>FALSE</errorConditionFormula>
        <errorMessage>TEST</errorMessage>
    </validationRules>
</CustomObject>